Update video plane width and comment

--- a/index.html
+++ b/index.html
@@ -150,13 +150,13 @@
         <!-- Target Entity (il poster) -->
         <a-entity id="target" mindar-image-target="targetIndex: 0">
             
-            <!-- Video Plane -->
+            <!-- Video Plane - Formato Verticale -->
             <a-video
                 id="video-plane"
                 src="#video-animazione"
                 position="0 0 0"
                 rotation="0 0 0"
-                width="1.77"
+                width="0.75"
                 height="1"
                 opacity="1"
                 play-on-visible>
